update CSS to prevent event title wrapping

--- a/web/css/events.css
+++ b/web/css/events.css
@@ -4,7 +4,7 @@
 
 .wv-eventslist li.item .event-icon {
   float: left;
-  margin: 0 8px 1px 5px;
+  margin: 0 8px 13px 5px;
 }
 
 .map-item-list li.item {
